<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_nav</name>
  <version>0.0.1</version>
  <description>Lightweight Turtlebot navigation with simple trainer node (stub) for ROS2</description>
  <maintainer email="you@example.com">Kourosh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> <depend>python3-numpy</depend> 

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros-foxy-gazebo-ros-pkgs</exec_depend> <exec_depend>ros-foxy-xacro</exec_depend>           <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
